// Original file: proto/chatbot.proto


export interface FinalResult {
  'conversationCardJson'?: (string);
  'dashboardCardsJson'?: (string);
  'suggestionsJson'?: (string);
}

export interface FinalResult__Output {
  'conversationCardJson': (string);
  'dashboardCardsJson': (string);
  'suggestionsJson': (string);
}
